# NEF

./: README.md  nef_pipeline_animated.html  pyproject.toml  setup_nef.sh
src/nef/: __init__.py  core.py
tests/: test_nef.py
